# FastBox

./: .gitignore  README.md  client.py  client.spec  hello.py  init_db.py  main.py  pyproject.toml  requirements.txt  tailwind.config.js
app/: main_route.py
app/core/: crud.py  db.py  security.py
app/core/project/: crud.py
app/models/: project.py  user.py
app/routes/: commuication.py  deps.py  index.py  main.py  project.py  student.py  user.py
app/schemas/: project.py  user.py
core/: config.py  db.py
static/: style.css
templates/: base.html  index.html  test.html
templates/project/: AddForm.html  ProjectManage.html  base.html
templates/room/: index.html  manage_bar.html
templates/student/: add_student.html  edit_student.html  index.html
templates/user/: base.html  edit_user.html  login.html  manage.html  manage_bar.html  me.html  nav.html  register.html  user.html
